compiler/testData/diagnostics/tests/annotations/contextReceiverOnProperty.fir.kt
// LANGUAGE: +ContextReceivers
// ISSUE: KT-72863

@Target(AnnotationTarget.TYPE)
annotation class Anno(val position: String)

<!CONTEXT_RECEIVERS_DEPRECATED!>context<!>(List<@Anno("context receiver type $prop") Int>)
val property: Int get() = 0

const val prop = "str"
